@@ -28,7 +28,7 @@ install:
 	mkdir -p $(DESTDIR)$(SLIBDIR)/security
 	mkdir -p $(DESTDIR)$(MANDIR)/man8
 	install -m $(SHLIBMODE) $(PAM_TCB) $(DESTDIR)$(SLIBDIR)/security/
-	install -m 644 pam_tcb.8 $(DESTDIR)$(MANDIR)/man8/
+	install -p -m 644 pam_tcb.8 $(DESTDIR)$(MANDIR)/man8/
 
 install-pam_unix: install
 	ln -s $(PAM_TCB) $(DESTDIR)$(SLIBDIR)/security/pam_unix.so
@@ -36,7 +36,11 @@ install-pam_unix: install
 	ln -s $(PAM_TCB) $(DESTDIR)$(SLIBDIR)/security/pam_unix_auth.so
 	ln -s $(PAM_TCB) $(DESTDIR)$(SLIBDIR)/security/pam_unix_passwd.so
 	ln -s $(PAM_TCB) $(DESTDIR)$(SLIBDIR)/security/pam_unix_session.so
-	install -m 644 pam_unix.8 $(DESTDIR)$(MANDIR)/man8/
+	install -p -m 644 pam_unix.8 $(DESTDIR)$(MANDIR)/man8/
+
+install-pam_pwdb: install
+	ln -s $(PAM_TCB) $(DESTDIR)$(SLIBDIR)/security/pam_pwdb.so
+	install -p -m 644 pam_pwdb.8 $(DESTDIR)$(MANDIR)/man8/
 
 clean:
 	rm -f *.o *~ $(PAM_TCB)
