@@ -1,0 +1,1 @@
+.so man8/pam_tcb.8
