@@ -1,4 +1,4 @@
-# $Id: tcb.spec,v 1.34 2005/08/23 15:49:09 ldv Exp $
+# $Id: tcb.spec,v 1.35 2005/08/23 16:03:44 ldv Exp $
 
 Summary: Libraries and tools implementing the tcb password shadowing scheme.
 Name: tcb
@@ -10,17 +10,20 @@ URL: http://www.openwall.com/tcb/
 Source: ftp://ftp.openwall.com/pub/projects/tcb/%name-%version.tar.gz
 PreReq: /sbin/ldconfig, %_libexecdir/chkpwd
 Requires: glibc-crypt_blowfish
+# Due to pam_pwdb.so
+Conflicts: pam < 0:0.80-owl1
 BuildRequires: glibc-crypt_blowfish-devel, pam-devel
 BuildRoot: /override/%name-%version
 
 %description
 The tcb package consists of three components: pam_tcb, libnss_tcb, and
-libtcb.  pam_tcb is a PAM module which supersedes pam_unix.  It also
-implements the tcb password shadowing scheme (see tcb(5) for details).
-The tcb scheme allows many core system utilities (passwd(1) being the
-primary example) to operate with little privilege.  libnss_tcb is the
-accompanying NSS module.  libtcb contains code shared by the PAM and
-NSS modules and is also used by programs from the shadow-utils package.
+libtcb.  pam_tcb is a PAM module which supersedes pam_unix and pam_pwdb.
+It also implements the tcb password shadowing scheme (see tcb(5) for
+details).  The tcb scheme allows many core system utilities (passwd(1)
+being the primary example) to operate with little privilege.  libnss_tcb
+is the accompanying NSS module.  libtcb contains code shared by the
+PAM and NSS modules and is also used by programs from the shadow-utils
+package.
 
 %package devel
 Summary: Libraries and header files for building tcb-aware applications.
@@ -39,8 +42,8 @@ CFLAGS="$RPM_OPT_FLAGS -DENABLE_SETFSUGID" %__make
 
 %install
 rm -rf %buildroot
-make install-non-root install-pam_unix DESTDIR=%buildroot MANDIR=%_mandir \
-	LIBDIR=%_libdir SLIBDIR=/%_lib
+make install-non-root install-pam_unix install-pam_pwdb DESTDIR=%buildroot \
+	MANDIR=%_mandir LIBDIR=%_libdir SLIBDIR=/%_lib
 
 %post -p /sbin/ldconfig
 %postun -p /sbin/ldconfig
@@ -49,6 +52,8 @@ make install-non-root install-pam_unix DESTDIR=%buildroot MANDIR=%_mandir \
 grep -q '^shadow:[^:]*:42:' /etc/group && \
 	chgrp shadow %_libexecdir/chkpwd/tcb_chkpwd && \
 	chmod 2711 %_libexecdir/chkpwd/tcb_chkpwd
+grep -q ^chkpwd: /etc/group || groupadd -g 163 chkpwd
+chgrp chkpwd %_libexecdir/chkpwd && chmod 710 %_libexecdir/chkpwd
 
 # This is needed for upgrades from older versions of the package.
 %triggerpostun -- tcb < 0.9.7.1
@@ -59,6 +64,7 @@ rmdir /sbin/chkpwd.d
 %doc LICENSE
 /%_lib/libnss_tcb.so.2
 /%_lib/libtcb.so.*
+/%_lib/security/pam_pwdb.so
 /%_lib/security/pam_tcb.so
 /%_lib/security/pam_unix.so
 /%_lib/security/pam_unix_acct.so
@@ -67,8 +73,10 @@ rmdir /sbin/chkpwd.d
 /%_lib/security/pam_unix_session.so
 /sbin/tcb_convert
 /sbin/tcb_unconvert
+%attr(0700,root,root) %verify(not mode group) %dir %_libexecdir/chkpwd
 %attr(0700,root,root) %verify(not mode group) %_libexecdir/chkpwd/tcb_chkpwd
 %_mandir/man5/tcb.5*
+%_mandir/man8/pam_pwdb.8*
 %_mandir/man8/pam_tcb.8*
 %_mandir/man8/pam_unix.8*
 %_mandir/man8/tcb_convert.8*
@@ -87,6 +95,8 @@ NSS and PAM modules.
 - In the PAM module, implemented "openlog" option and disabled
 openlog/closelog calls for each logging function invocation,
 according to new convention introduced in pam-0.80-owl1.
+- Packaged pam_pwdb.so symlink in addition to pam_unix.so.
+- Packaged %_libexecdir/chkpwd directory.
 
 * Fri Apr 22 2005 Dmitry V. Levin <ldv@owl.openwall.com> 0.9.8.9-owl1
 - Deal with compilation warnings generated by new gcc compiler.
